# terminal-chat-platform

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  Makefile  MessageServer.cpp  MessageServer.h  README.md  RequestHandler.cpp  RequestHandler.h  ResponseHandler.cpp  ResponseHandler.h  ServerSocket.cpp  ServerSocket.h  Session.cpp  Session.h  UserSocket.cpp  UserSocket.h  client  client.cpp  client.h  cmake_install.cmake  errors.h  graphics.cpp  graphics.h  protocol.cpp  protocol.h  server  server.cpp  server.h  tcp  tcp-key.pem  tui_testing.cpp  unordered_map_ts.hpp
.cache/clangd/index/: Client.cpp.37A662E5C38625DE.idx  Client.h.6E884E490D93A739.idx  ClientSocket.cpp.4CA24787BB24B4AB.idx  ClientSocket.h.494C86780A2EF6A2.idx  MessageServer.cpp.982C4C08FA7A9EA4.idx  MessageServer.h.2AEA0CA7F78BEA5E.idx  RequestHandler.cpp.B4F38BC61D7B98DD.idx  RequestHandler.h.8D621E5C008C487A.idx  ResponseHandler.cpp.2BE4C8F61B493D3A.idx  ResponseHandler.h.DEC60D9B112008EC.idx  ServerSocket.cpp.D36BBD4253CF2C5B.idx  ServerSocket.h.4C2D70A93B2F405B.idx  Session.cpp.3DCF4BEFA7E4EDD1.idx  Session.h.F760B0518074A4C8.idx  UserSocket.cpp.DBA8191F2379F107.idx  UserSocket.h.0FBBC2592C8BB404.idx  errors.h.CD0B73B940AD53A2.idx  graphics.cpp.D217BD0959126396.idx  graphics.h.28646393BE67B8B1.idx  protocol.cpp.9FF8C24C2A75DFEA.idx  protocol.h.CAEF5929C3EA762C.idx
